--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "## Project setup ``` npm install ```",
     "author": "",
     "scripts": {
-        "dev": "vue-cli-service serve",
+        "start": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint"
     },
