--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
     "description": "## Project setup ``` npm install ```",
     "author": "",
     "scripts": {
-        "start": "vue-cli-service serve",
+        "dev": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@mdi/font": "^4.5.95",
         "@tensorflow/tfjs": "^0.10.0",
         "@tensorflow/tfjs-vis": "^1.3.0",
         "chart.js": "^2.9.2",
         "core-js": "^2.6.5",
         "fabric": "^3.4.0",
         "fibers": "^4.0.2",
+        "font-awesome": "^4.7.0",
         "vue": "^2.6.10",
+        "vue-material-design-icons": "^4.1.0",
         "vuetify": "^2.1.0"
     },
     "devDependencies": {
